Se agregaron las páginas de testimonios y compras

--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
             </div>
         </div>
         <img class="airpods-pro" src="img/airpods_pro.jpeg" alt="">
+
+        <section class="galeria">
+            <h2>Galería de Imágenes</h2>
+            <div class="galeria-imagenes">
+                <img src="img/galeria1.jpeg" alt="">
+                <img src="img/galeria2.jpeg" alt="">
+                <img src="img/galeria3.jpeg" alt="">
+                <img src="img/galeria4.jpeg" alt="">
+                <img src="img/galeria5.jpeg" alt="">
+                <img src="img/galeria6.jpeg" alt="">
+            </div>
+        </section>
     </main>
 
 </body>
