Se realizaron algunas modificaciones

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <button class="learn-button">Learn more</button>
                 <button class="buy-button"><strong>Buy now</strong></button>
             </div>
+            <a href="#" class="opiniones">Opiniones (450)</a>
         </div>
         <img class="airpods-pro" src="img/airpods_pro.jpeg" alt="">
 
@@ -44,9 +45,7 @@
                 <img src="img/galeria1.jpeg" alt="">
                 <img src="img/galeria2.jpeg" alt="">
                 <img src="img/galeria3.jpeg" alt="">
-                <img src="img/galeria4.jpeg" alt="">
-                <img src="img/galeria5.jpeg" alt="">
-                <img src="img/galeria6.jpeg" alt="">
+                <img src="img/galeria5.jpg" alt="">
             </div>
         </section>
     </main>
