--- a/compra.html
+++ b/compra.html
@@ -8,15 +8,15 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="bg-gray-500">
-    <div class="grid grid-rows-[auto_1fr] min-h-screen">
+    <div class="grid grid-rows-[auto_1fr_auto] min-h-screen">
         <nav class="flex justify-between bg-zinc-800 text-white px-6 py-6">
-            <h1 class="text-4xl font-bold text-center md:text-left">Mi tienda</h1>
+            <h1 class="text-4xl font-bold text-center md:text-left">Mis compras</h1>
             <img class="h-15" src="img/logo_apple.jpg" alt="">
         </nav>
 
         <div class="grid grid-cols-1 md:grid-cols-4 gap-4 p-4">
             <!-- Sidebar -->
-            <aside class="md:col-span-1 bg-sky-200 p-4 rounded shadow max-h-[300px] overflow-auto">
+            <aside class="md:col-span-1 bg-sky-200 p-4 rounded-2xl shadow max-h-[300px]">
                 <h2 class="font-semibold mb-2">Pasos de compra</h2>
                 <ul class="space-y-2">
                     <li>1. Selección de variantes</li>
@@ -24,21 +24,23 @@
                     <li>3. Métodos de pago</li>
                 </ul>
             </aside>
-            <main class="text-xl md:col-span-3 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 max-h-[300px] overflow-auto">
-                <section class="bg-cyan-300 p-4 rounded-4xl shadow">
+            <main class="text-xl md:col-span-3 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 max-h-[300px]">
+                <section class="bg-cyan-300 p-4 rounded-4xl">
                     <h2 class="font-bold">Resumen del Producto</h2>
                     <p>Producto: Airpods Pro</p>
                     <p>Precio: S/800</p>
                     <img class="h-15" src="img/airpods_pro.jpeg" alt="">
                 </section>
-                
-                <section class="bg-blue-300 p-4 rounded-4xl shadow h-30">
+                <section class="bg-blue-300 p-4 rounded-4xl h-30">
                     <h3 class="font-bold">Finalizar compra</h3>
                     <button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded">Comprar ahora</button>
                 </section>
             </main>
         </div>
-        
+        <!-- Footer -->
+        <footer class="bg-zinc-800 text-white text-center p-4">
+            <p>© 2025 Apple. Todos los derechos reservados.</p>
+        </footer>
     </div>
 </body>
 </html>
