--- a/compra.html
+++ b/compra.html
@@ -16,7 +16,7 @@
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4 p-4">
             <!-- Sidebar -->
-            <aside class="md:col-span-1 bg-sky-200 p-4 rounded-2xl max-h-[300px]">
+            <aside class="md:col-span-1 bg-sky-200 p-4 rounded-2xl max-h-[300px] w-90">
                 <h2 class="font-semibold mb-2">Pasos de compra</h2>
                 <ul class="space-y-2">
                     <li>1. Selección de variantes</li>
@@ -24,7 +24,7 @@
                     <li>3. Métodos de pago</li>
                 </ul>
             </aside>
-            <main class="text-xl md:col-span-2 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 gap-4 max-h-[300px]">
+            <main class="text-xl md:col-span-2 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 gap-10 max-h-[300px]">
                 <section class="bg-cyan-300 p-4 rounded-4xl">
                     <h2 class="font-bold">Resumen del Producto</h2>
                     <p>Producto: Airpods Pro</p>
