--- a/compra.html
+++ b/compra.html
@@ -16,7 +16,7 @@
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4 p-4">
             <!-- Sidebar -->
-            <aside class="md:col-span-1 bg-sky-200 p-4 rounded-2xl max-h-[300px] w-90">
+            <aside class="text-2xl md:col-span-1 bg-sky-200 p-4 rounded-2xl max-h-[300px]">
                 <h2 class="font-semibold mb-2">Pasos de compra</h2>
                 <ul class="space-y-2">
                     <li>1. Selección de variantes</li>
