--- a/testimonios.html
+++ b/testimonios.html
@@ -19,7 +19,7 @@
         <div class="grid grid-cols-1 md:grid-cols-4 gap-4 p-4">
           
             <!-- Sidebar -->
-            <aside class="md:col-span-1 bg-sky-200 p-4 rounded-2xl max-h-[300px]">
+            <aside class="text-2xl md:col-span-1 bg-sky-200 p-4 rounded-2xl max-h-[300px]">
                 <h2 class="font-semibold mb-2">Filtrar por:</h2>
                 <ul class="space-y-4">
                     <li><a href="#" class="text-blue-600 hover:underline">Positivos (380)</a></li>
